--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         <a href="https://www.linkedin.com/in/joymax-nascimento-456b4b31/" class="button fork"><strong>Linkedin</strong></a>
         
+        <iframe scrolling="no" frameborder="0" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=classic&autoplay=true&playlist=true&width=700&height=350&color=ff0000&layout=dark&size=medium&type=playlist&id=4986604888&app_id=1" width="700" height="350"></iframe>
+        
       </div><!-- end banner -->
 
  
